cmake_minimum_required (VERSION 2.8)
project (ClientShellDLL)

add_subdirectory(../../libs/MFCStub ${CMAKE_CURRENT_BINARY_DIR}/MFCStub)
#add_subdirectory(../../libs/stdlith ${CMAKE_CURRENT_BINARY_DIR}/stdlith)
add_subdirectory(../../libs/ButeMgr ${CMAKE_CURRENT_BINARY_DIR}/ButeMgr)
add_subdirectory(../../libs/CryptMgr ${CMAKE_CURRENT_BINARY_DIR}/CryptMgr)
#add_subdirectory(../../libs/lith ${CMAKE_CURRENT_BINARY_DIR}/lith)
add_subdirectory(../../libs/RegMgr ${CMAKE_CURRENT_BINARY_DIR}/RegMgr)
add_subdirectory(../../libs/LTGUIMgr ${CMAKE_CURRENT_BINARY_DIR}/LTGUIMgr)
add_subdirectory(../../libs/ServerDir ${CMAKE_CURRENT_BINARY_DIR}/ServerDir)

add_library (ClientShellDLL SHARED
	ClientShellShared/ActivateObjectFX.cpp
	../Shared/ActivateTypeMgr.cpp
	../Shared/Animator.cpp
	../Shared/AssertMgr.cpp
	../Shared/AttachButeMgr.cpp
	ClientShellShared/BaseLineSystemFX.cpp
	ClientShellShared/BaseMenu.cpp
	ClientShellShared/BaseParticleSystemFX.cpp
	ClientShellShared/BasePolyDrawFX.cpp
	ClientShellShared/BaseScaleFX.cpp
	ClientShellShared/BaseScreen.cpp
	ClientShellShared/BeamFX.cpp
	ClientShellShared/BodyFX.cpp
	../Shared/ButeListReader.cpp
	ClientShellShared/BulletTrailFX.cpp
	ClientShellShared/CameraOffsetMgr.cpp
	ClientShellShared/ChainedFX.cpp
	ClientShellShared/CharacterFX.cpp
	ClientShellShared/CheatMgr.cpp
	ClientShellShared/client_physics.cpp
	ClientShellShared/ClientButeMgr.cpp
	ClientShellShared/ClientFXDB.cpp
	ClientShellShared/ClientFXMgr.cpp
	ClientShellShared/ClientInfoMgr.cpp
	ClientShellShared/ClientMultiplayerMgr.cpp
	ClientShellShared/ClientSaveLoadMgr.cpp
	../Shared/ClientServerShared.cpp
	ClientShellShared/ClientSoundMgr.cpp
	ClientShellShared/ClientTrackedNodeContext.cpp
	ClientShellShared/ClientTrackedNodeMgr.cpp
	ClientShellShared/ClientUtilities.cpp
	ClientShellShared/ClientWeapon.cpp
	ClientShellShared/ClientWeaponMgr.cpp
	ClientShellShared/ClientWeaponUtils.cpp
	ClientShellShared/CMoveMgr.cpp
	../Shared/CommonUtilities.cpp
	../Shared/CRC32.cpp
	ClientShellShared/Credits.cpp
	ClientShellShared/CursorMgr.cpp
	ClientShellShared/DamageFXMgr.cpp
	../Shared/DamageTypes.cpp
	ClientShellShared/DeathFX.cpp
	ClientShellShared/DebrisFX.cpp
	../Shared/DebrisMgr.cpp
	../Shared/DebugLine.cpp
	ClientShellShared/DebugLineFX.cpp
	../Shared/DebugNew.cpp
	ClientShellShared/DoomsdayPieceFX.cpp
	ClientShellShared/DynamicLightFX.cpp
	ClientShellShared/DynamicOccluderVolumeFX.cpp
	ClientShellShared/ExplosionFX.cpp
	ClientShellShared/FireFX.cpp
	ClientShellShared/FlashLight.cpp
	ClientShellShared/FullScreenTint.cpp
	../Shared/FXButeMgr.cpp
	../Shared/FXStructs.cpp
	ClientShellShared/GadgetDisabler.cpp
	ClientShellShared/GadgetTargetFX.cpp
	../Shared/GameAlloc.cpp
	../Shared/GameButeMgr.cpp
	ClientShellShared/GameClientShell.cpp
	ClientShellShared/GameSettings.cpp
	ClientShellShared/GibFX.cpp
	ClientShellShared/GlobalClientMgr.cpp
	../Shared/GlobalMgr.cpp
	ClientShellShared/HeadBobMgr.cpp
	ClientShellShared/HitBox.cpp
	ClientShellShared/HUDBar.cpp
	ClientShellShared/HUDChatInput.cpp
	ClientShellShared/HUDDamage.cpp
	ClientShellShared/HUDDecision.cpp
	ClientShellShared/HUDDisplayMeter.cpp
	ClientShellShared/HUDDistance.cpp	
	ClientShellShared/HUDMessage.cpp
	ClientShellShared/HUDMessageQueue.cpp
	ClientShellShared/HUDMeter.cpp
	ClientShellShared/HUDMgr.cpp
	ClientShellShared/HUDMissionText.cpp
	ClientShellShared/HUDPaused.cpp
	ClientShellShared/HUDPopup.cpp
	ClientShellShared/HUDRadar.cpp
	ClientShellShared/HUDScores.cpp
	ClientShellShared/HUDSubtitles.cpp
	ClientShellShared/HUDTransmission.cpp
	../../sdk/inc/iltbaseclass.cpp
	ClientShellShared/IntelItemList.cpp
	ClientShellShared/InterfaceMgr.cpp
	ClientShellShared/InterfaceResMgr.cpp
	ClientShellShared/InterfaceSurfMgr.cpp
	ClientShellShared/InterfaceTimer.cpp
	ClientShellShared/IpMgr.cpp
	ClientShellShared/JumpVolumeFX.cpp
	../Shared/KeyMgr.cpp
	ClientShellShared/LaserBeam.cpp
	ClientShellShared/LaserTriggerFX.cpp
	ClientShellShared/LayoutMgr.cpp
	ClientShellShared/LeanMgr.cpp
	ClientShellShared/LensFlareFX.cpp
	ClientShellShared/LightFX.cpp
	ClientShellShared/LightGroupFX.cpp
	ClientShellShared/LightningFX.cpp
	ClientShellShared/LightScaleMgr.cpp
	ClientShellShared/LineSystemFX.cpp
	ClientShellShared/LoadingScreen.cpp
	../../sdk/inc/LTEulerAngles.cpp
	../../sdk/inc/ltmodule.cpp
	../../sdk/inc/ltobjref.cpp
	../../sdk/inc/ltquatbase.cpp
	ClientShellShared/MarkSFX.cpp
	ClientShellShared/MenuIntel.cpp
	ClientShellShared/MenuInventory.cpp
	ClientShellShared/MenuKeys.cpp
	ClientShellShared/MenuMgr.cpp
	ClientShellShared/MenuMission.cpp
	ClientShellShared/MenuPlayer.cpp
	ClientShellShared/MenuSystem.cpp
	ClientShellShared/MessageBox.cpp
	ClientShellShared/MineFX.cpp
	../Shared/MissionButeMgr.cpp
	ClientShellShared/MissionMgr.cpp
	../Shared/ModelButeMgr.cpp
	ClientShellShared/Music.cpp
	ClientShellShared/MuzzleFlashFX.cpp
	ClientShellShared/MuzzleFlashParticleFX.cpp
	../Shared/NetDefs.cpp
	ClientShellShared/NodeController.cpp
	ClientShellShared/NodeLinesFX.cpp
	ClientShellShared/ObjectiveControl.cpp
	ClientShellShared/ObjSpriteFX.cpp
	../Shared/ParsedMsg.cpp
	ClientShellShared/ParticleExplosionFX.cpp
	ClientShellShared/ParticleShowerFX.cpp
	ClientShellShared/ParticleSystemFX.cpp
	ClientShellShared/ParticleTrailFX.cpp
	ClientShellShared/ParticleTrailSegmentFX.cpp
	ClientShellShared/PerformanceMgr.cpp
	ClientShellShared/PerformanceTest.cpp
	ClientShellShared/PickupItemFX.cpp
	ClientShellShared/PlayerCamera.cpp
	ClientShellShared/PlayerLureFX.cpp
	ClientShellShared/PlayerMgr.cpp
	ClientShellShared/PlayerSoundFX.cpp
	ClientShellShared/PlayerStats.cpp
	ClientShellShared/PlayerVehicleFX.cpp
	ClientShellShared/PlayerViewAttachmentMgr.cpp
	ClientShellShared/PolyDebrisFX.cpp
	ClientShellShared/PolyGridFX.cpp
	ClientShellShared/PolyLineFX.cpp
	ClientShellShared/PopupMgr.cpp
	ClientShellShared/PopupText.cpp
	ClientShellShared/ProfileMgr.cpp
	../Shared/ProfileUtils.cpp
	ClientShellShared/ProjectileFX.cpp
	ClientShellShared/PVFXMgr.cpp
	ClientShellShared/RadarObjectFX.cpp
	../Shared/RadarTypeMgr.cpp
	ClientShellShared/RagDoll.cpp
	ClientShellShared/RagDollConstraint.cpp
	ClientShellShared/RandomSparksFX.cpp
	../Shared/SaveLoadMgr.cpp
	ClientShellShared/ScatterFX.cpp
	../Shared/ScmdConsole.cpp
	ClientShellShared/ScmdConsoleDriver_CShell.cpp
	ClientShellShared/ScreenMgr.cpp
	ClientShellShared/ScreenPostload.cpp
	ClientShellShared/ScreenPreload.cpp
	ClientShellShared/ScreenSpriteMgr.cpp
	ClientShellShared/ScreenTintMgr.cpp
	ClientShellShared/Searcher.cpp
	../Shared/SearchItemMgr.cpp
	ClientShellShared/SearchLightFX.cpp
	ClientShellShared/SFXMgr.cpp
	../Shared/SharedFXStructs.cpp
	../Shared/SharedMission.cpp
	../Shared/SharedScoring.cpp
	ClientShellShared/ShellCasingFX.cpp
	ClientShellShared/SkillControl.cpp
	../Shared/SkillsButeMgr.cpp
	ClientShellShared/SmokeFX.cpp
	ClientShellShared/SnowFX.cpp
	../Shared/SoundButeMgr.cpp
	../Shared/SoundFilterMgr.cpp
	ClientShellShared/SoundFX.cpp
	../Shared/SoundMgr.cpp
	ClientShellShared/Sparam.cpp
	ClientShellShared/SpecialFXList.cpp
	ClientShellShared/sprinklesfx.cpp
	../Shared/stacktrace.cpp
	ClientShellShared/StdAfx.cpp
	ClientShellShared/SteamFX.cpp
	../Shared/SurfaceFunctions.cpp
	../Shared/SurfaceMgr.cpp
	ClientShellShared/TargetMgr.cpp
	../Shared/TeamMgr.cpp
	../Shared/TemplateList.cpp
	ClientShellShared/TextureFXMgr.cpp
	ClientShellShared/TimedText.cpp
	ClientShellShared/TracerFX.cpp
	../Shared/TrackedNode.cpp
	../Shared/TrackedNodeContext.cpp
	../Shared/TrackedNodeControlFn.cpp
	../Shared/TrackedNodeMgr.cpp
	ClientShellShared/TransitionFXMgr.cpp
	ClientShellShared/TriggerFX.cpp
	../Shared/TriggerTypeMgr.cpp
	../Shared/UberAssert.cpp
	ClientShellShared/VehicleMgr.cpp
	../Shared/VersionMgr.cpp
	ClientShellShared/VisionModeMgr.cpp
	ClientShellShared/VKDefs.cpp
	../Shared/WaveFn.cpp
	ClientShellShared/WeaponChooser.cpp
	ClientShellShared/WeaponFX.cpp
	../Shared/WeaponMgr.cpp
	ClientShellShared/WeatherFX.cpp
	../Shared/WinUtil.cpp
	# NOLF 2
	TO2/GlobalsInit.cpp
	TO2/HUDAir.cpp
	TO2/HUDAmmo.cpp
	TO2/HUDCarrying.cpp
	TO2/HUDChooser.cpp
	TO2/HUDCompass.cpp
	TO2/HUDCrosshair.cpp
	TO2/HUDDamageDir.cpp
	TO2/HUDDoomsday.cpp
	TO2/HUDHealth.cpp
	TO2/HUDHiding.cpp
	TO2/HUDHidingBar.cpp
	TO2/HUDObjectives.cpp
	TO2/HUDProgressBar.cpp
	TO2/HUDRadio.cpp
	TO2/HUDRespawn.cpp
	TO2/ScreenAudio.cpp
	TO2/ScreenConfigure.cpp
	TO2/ScreenControls.cpp
	TO2/ScreenCrosshair.cpp
	TO2/ScreenDisplay.cpp
	TO2/ScreenEndCoopMission.cpp
	TO2/ScreenEndDMMission.cpp
	TO2/ScreenEndMission.cpp
	TO2/ScreenFailure.cpp
	TO2/ScreenGame.cpp
	TO2/ScreenHost.cpp
	TO2/ScreenHostDDOptions.cpp
	TO2/ScreenHostDMOptions.cpp
	TO2/ScreenHostLevels.cpp
	TO2/ScreenHostMission.cpp
	TO2/ScreenHostOptions.cpp
	TO2/ScreenHostTDMOptions.cpp
	TO2/ScreenHostWeapons.cpp
	TO2/ScreenJoin.cpp
	TO2/ScreenJoinLAN.cpp
	TO2/ScreenJoystick.cpp
	TO2/ScreenKeyboard.cpp
	TO2/ScreenLoad.cpp
	TO2/ScreenMain.cpp
	TO2/ScreenMouse.cpp
	TO2/ScreenMulti.cpp
	TO2/ScreenOptions.cpp
	TO2/ScreenPerformance.cpp
	TO2/ScreenPlayer.cpp
	TO2/ScreenPlayerSkills.cpp
	TO2/ScreenPlayerTeam.cpp
	TO2/ScreenProfile.cpp
	TO2/ScreenSave.cpp
	TO2/ScreenSingle.cpp
	TO2/ScreenTeam.cpp
	TO2/Stdafx.cpp
	TO2/TO2ClientWeaponAllocator.cpp
	TO2/TO2GameClientShell.cpp
	TO2/TO2HUDMgr.cpp
	TO2/TO2InterfaceMgr.cpp
	TO2/TO2LayoutMgr.cpp
	../Shared/TO2/TO2MissionButeMgr.cpp
	TO2/TO2PlayerMgr.cpp
	TO2/TO2PlayerStats.cpp
	TO2/TO2ScreenMgr.cpp
	../Shared/TO2/TO2VersionMgr.cpp)
	# TRON
	#TRON/AdditiveCtrl.cpp
	#TRON/ArcCtrl.cpp
	#TRON/ClientWeaponClusterDisc.cpp
	#TRON/ClientWeaponDisc.cpp
	#TRON/GlobalsInit.cpp
	#TRON/HUDArmor.cpp
	#TRON/HUDChooser.cpp
	#TRON/HUDCrosshair.cpp
	#TRON/HUDEnergyTransfer.cpp
	#TRON/HUDHealthEnergy.cpp
	#TRON/HUDPermissions.cpp
	#TRON/HUDProgress.cpp
	#TRON/HUDVersion.cpp
	#TRON/HUDWeapon.cpp
	#TRON/HUDWeapons.cpp
	#TRON/ProceduralCtrl.cpp
	#TRON/RatingMgr.cpp
	#TRON/ScreenAudio.cpp
	#TRON/ScreenConfigure.cpp
	#TRON/ScreenControls.cpp
	#TRON/ScreenCrosshair.cpp
	#TRON/ScreenDisplay.cpp
	#TRON/ScreenEndMission.cpp
	#TRON/ScreenFailure.cpp
	#TRON/ScreenGame.cpp
	#TRON/ScreenHost.cpp
	#TRON/ScreenHostLevels.cpp
	#TRON/ScreenHostMission.cpp
	#TRON/ScreenJoin.cpp
	#TRON/ScreenJoinLAN.cpp
	#TRON/ScreenKeyboard.cpp
	#TRON/ScreenLoad.cpp
	#TRON/ScreenMain.cpp
	#TRON/ScreenMouse.cpp
	#TRON/ScreenMulti.cpp
	#TRON/ScreenOptions.cpp
	#TRON/ScreenPerformance.cpp
	#TRON/ScreenPlayer.cpp
	#TRON/ScreenProfile.cpp
	#TRON/ScreenRatings.cpp
	#TRON/ScreenSave.cpp
	#TRON/ScreenSingle.cpp
	#TRON/ScreenSubroutinues.cpp
	#TRON/Stdafx.cpp
	#TRON/SubroutineMgr.cpp
	#TRON/TRONClientWeaponAllocator.cpp
	#TRON/TronGameClientShell.cpp
	#TRON/TronHUDMgr.cpp
	#TRON/TronInterfaceMgr.cpp
	#TRON/TronLayoutMgr.cpp
	#TRON/TRONPlayerStats.cpp
	#TRON/TRONScreenMgr.cpp
	#TRON/TronTargetMgr.cpp)
set_target_properties(ClientShellDLL 
	PROPERTIES OUTPUT_NAME CShell)
add_definitions (-D_CRT_SECURE_NO_WARNINGS -D_CLIENTBUILD -DNOPS2 -DMEMTRACK_CLIENT -D_NOMFC)
include_directories (ClientShellShared
	TO2
	#TRON
	../Shared 
	../Shared/TO2
	#../Shared/TRON
	../../sdk/inc
	../../libs/MFCStub
	../../libs/stdlith
	../../libs/ButeMgr
	../../libs/CryptMgr
	../../libs/lith
	../../libs/RegMgr
	../../libs/LTGUIMgr
	../../libs/ServerDir
	../ClientRes/Shared
	../ClientRes/TO2)
target_link_libraries(ClientShellDLL
	MFCStub
	Lib_StdLith
	ButeMgr
	CryptMgr
	Lib_Lith
	RegMgr
	LTGUIMgr
	ServerDir
	winmm.lib)